// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageGovernance disables proposal creation if not connected 1`] = `
<div
  class="tm-page governance"
  data-title="Governance"
  search="proposals"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <tm-balance-stub />
           
          <div
            class="tool-bar"
          >
            <!---->
              
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
             
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
             
            <!---->
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      />
       
      <div
        class="tabs"
      >
        <div
          class="tab"
        >
          <router-link-stub
            to="[object Object]"
          >
            
      Proposals
    
          </router-link-stub>
        </div>
        <div
          class="tab"
        >
          <router-link-stub
            to="[object Object]"
          >
            
      Parameters
    
          </router-link-stub>
        </div>
      </div>
       
      <div
        class="header-buttons"
      >
        <button
          class="tm-btn"
          disabled="disabled"
          id="propose-btn"
        >
          <span
            class="tm-btn__container tm-btn--primary"
          >
            <!---->
            <span
              class="tm-btn__value"
            >
              Connecting...
            </span>
          </span>
        </button>
      </div>
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
    <!---->
     
    <!---->
      
    <!---->
     
    <router-view-stub />
  </main>
</div>
`;

exports[`PageGovernance has the expected html structure 1`] = `
<div
  class="tm-page governance"
  data-title="Governance"
  search="proposals"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <tm-balance-stub />
           
          <div
            class="tool-bar"
          >
            <!---->
              
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
             
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
             
            <!---->
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      />
       
      <div
        class="tabs"
      >
        <div
          class="tab"
        >
          <router-link-stub
            to="[object Object]"
          >
            
      Proposals
    
          </router-link-stub>
        </div>
        <div
          class="tab"
        >
          <router-link-stub
            to="[object Object]"
          >
            
      Parameters
    
          </router-link-stub>
        </div>
      </div>
       
      <div
        class="header-buttons"
      >
        <button
          class="tm-btn"
          id="propose-btn"
        >
          <span
            class="tm-btn__container tm-btn--primary"
          >
            <!---->
            <span
              class="tm-btn__value"
            >
              Create Proposal
            </span>
          </span>
        </button>
      </div>
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
    <!---->
     
    <!---->
      
    <!---->
     
    <router-view-stub />
  </main>
</div>
`;
